Version 2.02.99 - 
===================================
  liblvm/python API: Additions: PV create/removal/resize/listing
  liblvm/python API: Additions: LV attr/origin/Thin pool/Thin LV creation
  Add vgs/lvs -o vg_profile/lv_profile to report profiles attached to VG/LV.
  Add default.profile configuration profile and install it on make install.
  Create a new 'conf' subdir for configuration files including profiles.
  Make selected thinp settings customizable by a profile.
  Support changing VG/LV profiles: vgchange/lvchange --profile/--detachprofile.
  Support storing profile name in metadata for both VGs and LVs.
  Add new --profile command line arg to select a configuration profile for use.
  Add config/profile_dir to set working directory to load profiles from.
  Add configure --with-default-profile-subdir to select dir to keep profiles in.
  Add support for configuration profiles.
  Introduce config_source wrapper for identification of configuration sources.
  Avoid creation of multiple archives for one command.
  Use mirror_segtype_default if type not specified for linear->mirror upconvert.
  Fix use of too big chunks of memory when communication with lvmetad.
  Fix vgcfgrestore crash when specified incorrect vg name.
  Refine lvm.conf and man page documentation for autoactivation feature.
  Add support for thin volumes in vgsplit.
  Also filter partitions on mpath components if multipath_component_detection=1.
  Add lvresize support for online thin pool metadata volume resize.
  Add helper functions find_pool_lv() and pool_can_resize_metadata().
  Add detection for thin pool metadata resize kernel support.
  Report lvs volume type 'e' with higher priority.
  Report lvs volume type 'o' also for external origin volumes.
  Report lvs target type 't' only for thin pools and thin volumes.
  Fix test for active snapshot in cluster before resizing it.
  Report backtrace from dump filter error path.
  Do not use persistent filter with lvmetad.